<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.joke.JokeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/type_group_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:id="@+id/type_group">

            <RadioButton
                android:id="@+id/last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best"
                android:layout_gravity="center"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/random"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:layout_gravity="right"
                android:layout_weight="1" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_page_num"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_group_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/previous_btn"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/previous"
                style="@style/boldTextView"/>

            <TextView
                android:id="@+id/page_num"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0/0"
                android:textAlignment="center"
                style="@style/boldTextView"/>

            <TextView
                android:id="@+id/next_btn"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/next"
                android:textAlignment="textEnd"
                style="@style/boldTextView"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_page_num"
        tools:itemCount="5"
        tools:listitem="@layout/joke_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>